# ipres

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README_de.md  TRANSLATION.md  TRANSLATION_de.md  pyproject.toml  requirements.txt
.claude/commands/: muttest-diff.md  muttest.md
.github/workflows/: ci.yml  docs.yml  mutation.yml
attic/: ALLOCATION_STRATEGIES.md  NOTEBOOKS_VEROEFFENTLICHEN.md  README.md
attic/experiments/: analyze_floating_point_issue.py  analyze_floor_vs_ceil.py  analyze_government_majority_quotas.py  analyze_rare_case.py  crafted_example.py  derive_correct_formula.py  final_seed_search.py  find_difference_example.py  fix_ceiling_issue.py  proposed_fix.py  test_constituency_quota_invariant.py  test_election_config_fix.py  test_greedy_optimality.py  test_optimal_strategy.py  test_specific_example.py
data/: my_constituencies.csv
data/examples/: constituencies_random_5.csv  constituencies_random_7.csv  de_bundestag_constituencies.csv  de_bundestag_constituencies.parquet  de_bundestag_constituencies.schema.json  de_parties.csv  de_parties.parquet  parties_random_8.csv  random_constituencies_wtih_turnout.csv  random_constituencies_wtih_turnout.parquet
docs/source/: conf.py  index.rst
notebooks/de/: Parteien.ipynb  anwendungsbeispiel.ipynb  bundestagswahl.ipynb  globale_konfiguration.ipynb  iterative_verhältniswahl.ipynb  kurzuebersicht.ipynb  spezialfälle.ipynb  vote_matrix.ipynb  wahlauswertung.ipynb  wahlkreise.ipynb  wahlteilnehmer.ipynb
notebooks/en/: application_example.ipynb  contestant.ipynb  election_evaluation.ipynb  federal_election.ipynb  global_configuration.ipynb  quick_overview.ipynb  (+3 more)
scripts/: muttest.sh
tests/: AllocationTests.py  ApportionmentTests.py  BallotTests.py  BundestagswahlLoaderTests.py  CoalitionSeatDistributionTests.py  CoalitionVoteWeightsTests.py  ConstituenciesConfigTests.py  ContestantTests.py  DrawOfLotsTests.py  ElectionConfigTests.py  ElectionEvaluatorTests.py  ElectionIterationTests.py  ElectionPlotterTests.py  ElectionResultTests.py  ElectionSeatDistributionTests.py  ElectionTests.py  GoverningMajorityQuotaTests.py  PartiesTests.py  PartyQuotasCorrectionTests.py  PlottingTests.py  StringsTests.py  SuperMajorityMarginTests.py  VoteMatrixAnalyzerTest.py  VoteMatrixTests.py  test_paths.py  test_quota_gt_one_problem.py
(+141 files in other folders)
