[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipres"
version = "0.1.0"
description = "Election simulations and tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Daniel", email = "dansch71@googlemail.com" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "pandas",
  "ipywidgets",
  "matplotlib",
  "pyarrow",
  "ipyfilechooser",
  "scipy",
  "jinja2"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/danielschwalbe/ipres"
Repository = "https://github.com/danielschwalbe/ipres"

[tool.setuptools]
# Include package data specified by MANIFEST.in (if you add one later)
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ipres*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*Test*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true